tests/baselines/reference/nodeModulesSynchronousCallErrors(module=node12).errors.txt
error TS4124: Compiler option 'module' of value 'node12' is unstable. Use nightly TypeScript to silence this error. Try updating with 'npm install -D typescript@next'.
tests/cases/conformance/node/index.ts(3,22): error TS1471: Module './index.js' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
tests/cases/conformance/node/subfolder/index.ts(2,17): error TS1471: Module '../index.js' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
tests/cases/conformance/node/subfolder/index.ts(3,22): error TS1471: Module '../index.js' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.


!!! error TS4124: Compiler option 'module' of value 'node12' is unstable. Use nightly TypeScript to silence this error. Try updating with 'npm install -D typescript@next'.
==== tests/cases/conformance/node/subfolder/index.ts (2 errors) ====
    // cjs format file
    import {h} from "../index.js";
                    ~~~~~~~~~~~~~
!!! error TS1471: Module '../index.js' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
    import mod = require("../index.js");
                         ~~~~~~~~~~~~~
!!! error TS1471: Module '../index.js' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
    import {f as _f} from "./index.js";
    import mod2 = require("./index.js");
    export async function f() {
        const mod3 = await import ("../index.js");
        const mod4 = await import ("./index.js");
        h();
    }
==== tests/cases/conformance/node/index.ts (1 errors) ====
    // esm format file
    import {h as _h} from "./index.js";
    import mod = require("./index.js");
                         ~~~~~~~~~~~~
!!! error TS1471: Module './index.js' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
    import {f} from "./subfolder/index.js";
    import mod2 = require("./subfolder/index.js");
    export async function h() {
        const mod3 = await import ("./index.js");
        const mod4 = await import ("./subfolder/index.js");
        f();
    }
==== tests/cases/conformance/node/package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== tests/cases/conformance/node/subfolder/package.json (0 errors) ====
    {
        "type": "commonjs"
    }